crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__reindex_full.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: "f.run(&[\"reindex\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] reindex
exit: 0
--- stdout ---
{
  "message": "Done. Rebuilt index with 3 entries.",
  "success": true
}
--- stderr ---
{"error":"3 errors during reindex:"}
  [UUID]: embedding failed
  [UUID]: embedding failed
  [UUID]: embedding failed
