crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__admin__rollback_unsupported_version_fails.snap
---
source: crates/engram-cli/tests/cli/snapshot/admin.rs
expression: "f.run(&[\"rollback\", \"--target-version\", \"99\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] rollback --target-version 99
exit: 1
--- stdout ---
--- stderr ---
Error: Unsupported rollback target version 99; valid versions are 1..=2
